--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <nav class="navbar navbar-expand-lg navbar-purple">
     <!--Menu Icon(toggles menu on hover)-->
     <a class="navbar-brand rotate-on-hover menu-icon">
-      <img alt="flower icon" src="assets/img/flower.png">
+      <img alt="flower icon" src="./assets/img/flower.png">
     </a>
     
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +48,9 @@
 
 </div>
 
-  <!--Techstack-->
+  <!-- --------------------------------------------------------------------- -->
+  <!-- TECHSTACK-->
+  <!-- --------------------------------------------------------------------- -->
   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 450 70" style="enable-background:new 0 0 450 70;" xml:space="preserve">
 <style type="text/css">
@@ -79,34 +81,29 @@
 <path class="st0 cls-1" stroke="#FFFFFF" stroke-width="2" d="M384.7,35l28.8,28.8h-13.5L375,39l-4-4l4-4l24.9-24.8h13.5L384.7,35z M375,31l24.9-24.8L375,31z M399.9,63.8
 	L375,39L399.9,63.8z"/>
 </svg>
-
-
-
-
   <div class="techstack">
     <div class="skill-card">
-       <img src="/assets/techstack/java.svg">
+       <img src="./assets/techstack/java.svg">
         <p class="ts-text">Java</p>
     </div>
     <div class="skill-card">
-       <img src="/assets/techstack/typescript.svg">
+       <img src="./assets/techstack/typescript.svg">
        <p class="ts-text">TypeScript</p>
     </div>
     <div class="skill-card">
-      <img src="/assets/techstack/npm.svg">
+      <img src="./assets/techstack/npm.svg">
       <p class="ts-text">npm</p>
-
    </div>
    <div class="skill-card">
-    <img src="/assets/techstack/node.svg">
+    <img src="./assets/techstack/node.svg">
     <p class="ts-text">NodeJs</p>
    </div>
     <div class="skill-card">
-      <img src="/assets/techstack/python.svg">
+      <img src="./assets/techstack/python.svg">
       <p class="ts-text">Python</p>
     </div>
     <div class="skill-card">
-      <img src="/assets/techstack/bootstrap.svg">
+      <img src="./assets/techstack/bootstrap.svg">
       <p class="ts-text">Bootstrap</p>
     </div>
   </div>
@@ -115,13 +112,22 @@
   <!-- EXPERIMENTS -->
   <!-- ===================================================================== -->
 
-  
+  <div class="experiments">
+    <div class="experiment">
+      <img id="exp" src="">
+      <h3>My amazing lamp project</h3>
+    </div>
+    <div class="experiment">
+      <img id="exp" src="">
+      <h3>My own lil online board game</h3>
+    </div>
+  </div>
 
-
-
-  <!--Footer-->
+  <!-- ===================================================================== -->
+  <!-- FOOTER -->
+  <!-- ===================================================================== -->
   <footer>
-    <div class="footer text-center display-2 gradient-text p-2">xzufro.dev</div>
+    <div class="footer text-center gradient-text">xzufro.dev</div>
     <!--The Icon List-->
       <div class="icons text-center">
         <a class="social-icon p-2" href="https://github.com/xzufro"><img src="/assets/social/github.svg"></a>
@@ -133,6 +139,9 @@
 
   </footer>
 
+  <!-- --------------------------------------------------------------------- -->
+  <!-- Script stuff -->
+  <!-- --------------------------------------------------------------------- -->
   <script src="particles.js"></script>
   <script src="assets/anime.min.js"></script>
   <script src="index.js"></script>
